--- a/admin/index.html
+++ b/admin/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbymrW4hYS23CJxNzuxIuYYFLIOTV_Xe8ymZ24JGXFuNfI4lxxiVLS2nTHlCdNJi32s/exec" />
-    <title>Redirecting to Admin Panel...</title>
-  </head>
-  <body>
-    <p>Redirecting to Admin Panel...</p>
-  </body>
+<head>
+  <title>Admin Panel</title>
+  <style>
+    body, html {
+      margin: 0; 
+      padding: 0; 
+      height: 100%; 
+      overflow: hidden;
+    }
+    iframe {
+      width: 100%; 
+      height: 100vh; 
+      border: none;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://script.google.com/macros/s/AKfycbymrW4hYS23CJxNzuxIuYYFLIOTV_Xe8ymZ24JGXFuNfI4lxxiVLS2nTHlCdNJi32s/exec"></iframe>
+</body>
 </html>
