--- a/admin/index.html
+++ b/admin/index.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="bn">
 <head>
-  <title>Admin Panel</title>
-  <style>
-    body, html {
-      margin: 0; 
-      padding: 0; 
-      height: 100%; 
-      overflow: hidden;
-    }
-    iframe {
-      width: 100%; 
-      height: 100vh; 
-      border: none;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Admin Panel</title>
+
+    <link rel="icon" href="https://i.postimg.cc/ZnQQvLz4/Chat-GPT-Image-Jun-30-2025-11-26-21-PM.png">
+
+    <style>
+        body, html {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+        iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+    </style>
 </head>
 <body>
-  <iframe src="https://script.google.com/macros/s/AKfycbymrW4hYS23CJxNzuxIuYYFLIOTV_Xe8ymZ24JGXFuNfI4lxxiVLS2nTHlCdNJi32s/exec"></iframe>
+
+    <iframe src="https://script.google.com/macros/s/AKfycbymrW4hYS23CJxNzuxIuYYFLIOTV_Xe8ymZ24JGXFuNfI4lxxiVLS2nTHlCdNJi32s/exec"></iframe>
+
 </body>
 </html>
