--- a/pos/index.html
+++ b/pos/index.html
@@ -30,7 +30,7 @@
 <body>
     <iframe 
       src="https://script.google.com/macros/s/AKfycbzOj1fMjodE9eQflDPOmkaYY7S3kEjl7qxZE7ZHWvWlRK5v0RZk7Xi04lpQfz0M72E/exec" 
-      title="Sundorica Admin Panel"
+      title="Sundorica POS"
       allowfullscreen
       sandbox="allow-scripts allow-same-origin allow-forms"
     ></iframe>
