--- a/pos/index.html
+++ b/pos/index.html
@@ -1,34 +1,10 @@
 <!DOCTYPE html>
-<html lang="bn">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sundorica POS</title>
-
-  <link rel="icon" href="https://i.postimg.cc/ZnQQvLz4/Chat-GPT-Image-Jun-30-2025-11-26-21-PM.png" />
-
-  <style>
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      overflow: hidden;
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-      display: block;
-    }
-  </style>
-</head>
-<body>
-  <iframe 
-    src="https://script.google.com/macros/s/AKfycbzOj1fMjodE9eQflDPOmkaYY7S3kEjl7qxZE7ZHWvWlRK5v0RZk7Xi04lpQfz0M72E/exec" 
-    title="Sundorica POS"
-    allowfullscreen
-    sandbox="allow-scripts allow-same-origin allow-forms"
-  ></iframe>
-</body>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="0; url=https://script.google.com/macros/s/AKfycbzOj1fMjodE9eQflDPOmkaYY7S3kEjl7qxZE7ZHWvWlRK5v0RZk7Xi04lpQfz0M72E/exec" />
+    <title>Redirecting to POS...</title>
+  </head>
+  <body>
+    <p>Redirecting to POS system...</p>
+  </body>
 </html>
