--- a/pos/index.html
+++ b/pos/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base target="_top">
-    <title>POS System</title>
+    <title>Sundorica_POS</title>
     <link rel="icon" href="https://i.postimg.cc/ZnQQvLz4/Chat-GPT-Image-Jun-30-2025-11-26-21-PM.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
