--- a/admin/index.html
+++ b/admin/index.html
@@ -81,7 +81,9 @@
   <div id="delete-confirm-modal" class="modal items-center justify-center"><div class="modal-content max-w-sm text-center"><h2 class="text-xl font-bold mb-4">Confirm Deletion</h2><p class="text-gray-700 mb-6">Are you sure you want to delete this product? This action cannot be undone.</p><div class="flex justify-center gap-4"><button id="cancel-delete-btn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-lg">Cancel</button><button id="confirm-delete-btn" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg">Confirm Delete</button></div></div></div>
 
   <script>
-    const WEB_APP_URL = "YOUR_NEW_WEB_APP_URL"; // <-- IMPORTANT: Paste your new Web App URL here
+    // --- CONFIGURATION ---
+    // --- IMPORTANT: Paste your new Web App URL from Apps Script deployment here ---
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbymrW4hYS23CJxNzuxIuYYFLIOTV_Xe8ymZ24JGXFuNfI4lxxiVLS2nTHlCdNJi32s/exec"; 
 
     const loader = document.getElementById('loader');
     function showLoader() { loader.classList.remove('hidden'); }
@@ -108,11 +110,7 @@
         
         try {
             const response = await fetch(WEB_APP_URL, { method: 'POST', body: formData });
-            if (!response.ok) {
-                const errorText = await response.text();
-                console.error("Server Response Error Text:", errorText);
-                throw new Error(`Network response was not ok: ${response.status} ${response.statusText}`);
-            }
+            if (!response.ok) throw new Error(`Network Error: ${response.statusText}`);
             const result = await response.json();
             if (result.status !== 'success') throw new Error(result.message);
             return result.data;
