--- a/admin/index.html
+++ b/admin/index.html
@@ -81,9 +81,7 @@
   <div id="delete-confirm-modal" class="modal items-center justify-center"><div class="modal-content max-w-sm text-center"><h2 class="text-xl font-bold mb-4">Confirm Deletion</h2><p class="text-gray-700 mb-6">Are you sure you want to delete this product? This action cannot be undone.</p><div class="flex justify-center gap-4"><button id="cancel-delete-btn" class="bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-lg">Cancel</button><button id="confirm-delete-btn" class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-lg">Confirm Delete</button></div></div></div>
 
   <script>
-    // --- CONFIGURATION ---
-    // --- IMPORTANT: Paste your new Web App URL from Apps Script deployment here ---
-    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbymrW4hYS23CJxNzuxIuYYFLIOTV_Xe8ymZ24JGXFuNfI4lxxiVLS2nTHlCdNJi32s/exec"; 
+    const WEB_APP_URL = "https://script.google.com/macros/s/AKfycbymrW4hYS23CJxNzuxIuYYFLIOTV_Xe8ymZ24JGXFuNfI4lxxiVLS2nTHlCdNJi32s/exec"; // <-- IMPORTANT: Paste your new Web App URL here
 
     const loader = document.getElementById('loader');
     function showLoader() { loader.classList.remove('hidden'); }
@@ -350,6 +348,7 @@
         e.preventDefault();
         if (!document.getElementById('product-sku').value.trim()) { showToast('SKU is required.', 'error'); return; }
         if (localFiles.some(f => f.status === 'uploading')) { showToast('Please wait for images to finish uploading.', 'error'); return; }
+        if (localFiles.some(f => f.status === 'pending')) { showToast('You have un-uploaded images. Please click "Upload Selected Images" first.', 'error'); return; }
 
         const productData = { 
             rowIndex: document.getElementById('product-row-index').value, 
